--- a/assets/index.css
+++ b/assets/index.css
@@ -209,6 +209,13 @@ body{
         top: 200px;
     }
 
+    #soon{
+        width: 100%;
+        height: 600px;
+        position: relative;
+        top: 50px;
+    }
+
     .store{
         width: 80vw;
         position: relative;
@@ -274,13 +281,6 @@ body{
         left: 50px;
     }
 
-    #soon{
-        width: 100%;
-        height: 600px;
-        position: relative;
-        top: 50px;
-    }
-
 
     .about{
         position: relative;
@@ -289,6 +289,39 @@ body{
         top: 300px;
         background-color: transparent;
         height: 700px;
+    }
+
+    .footer{
+        position: relative;
+        top: 250px;
+        height: 400px;
+        width: 100vw;
+        left: -10px;
+        background-color: #1A1A2E;
+    }
+
+    .ft{
+        width: 30%;
+        margin-right: 20px;
+        display: inline-block;
+        position: relative;
+        top: 70px;
+        text-align: left;
+    }
+
+    .ft img{
+        width: 80%;
+    }
+
+    .ft a{
+        display: block;
+        text-decoration: none;
+        color: white;
+        font-size: 25px;
+    }
+
+    .ft a:hover{
+        color: #df2b49;
     }
 
 
