--- a/assets/game.css
+++ b/assets/game.css
@@ -1,11 +1,11 @@
 .styl{
     position: fixed;
     z-index: 999999;
-    top: 650px;
-    background-color: rgb(221, 10, 10);
+    top: 700px;
+    background-color: rgba(0, 0, 0, 0.418);
     width: 60vw;
     left: 20vw;
-    height: 130px;
+    height: 50px;
 }
 
 .styl h1{
