--- a/assets/game.css
+++ b/assets/game.css
@@ -1,5 +1,5 @@
 .styl{
-    position: fixed;
+    position: absolute;
     z-index: 999999;
     top: 700px;
     background-color: rgba(0, 0, 0, 0.418);
@@ -20,4 +20,75 @@
 #p2{
     position: relative;
     top: -40px
+}
+
+.pvp{
+    position: absolute;
+    z-index: 999999;
+    top: 680px;
+    width: 100px;
+    left: 8vw;
+    height: 50px;
+}
+
+.pvp img{
+    width: 100%;
+    animation: mymove infinite;
+    animation-duration: 3.5s;
+}
+
+@keyframes mymove {
+    /* from {top: 0px;}
+    to {bottom: 50px;} */
+    0%   {transform: translate3d(0,0,0);}
+    40%  {transform: translate3d(0,15%,0);}
+}
+
+#atkbtn{
+    position: absolute;
+    z-index: 999999;
+    top: 700px;
+    width: 100px;
+    left: 8vw;
+    height: 100px;
+    background-color: transparent;
+    border: transparent;
+    display: block;
+}
+
+#atkbtn img{
+    width: 100%;
+}
+
+.plyrinfo{
+    font-family: 'Glory', sans-serif;
+    position: absolute;
+    z-index: 999999;
+    width: 1300px;
+    left: 50px;
+    top: 100px;
+}
+
+.l-info{
+    position: absolute;
+    left: 50px;
+    text-align: left;
+}
+
+.l-info p{
+    position: relative;
+    top: -15px;
+    margin-bottom: 0;
+}
+
+.r-info{
+    position: absolute;
+    right: 50px;
+    text-align: right;
+}
+
+.r-info p{
+    position: relative;
+    top: -15px;
+    margin-bottom: 0;
 }
